Fri Jul 11 18:55:28 2003  Holger Bochnig <hbgg@gmx.net>

	* postscript.c: changed StartPage and EndPage to 
	  PSStartPage and PSEndPage, respectively, to avoid name clash
	  on Windows

Wed Jul 09 20:57:01 2003  Holger Bochnig <hbgg@gmx.net>

	* boardpos.c gtkexport.c gtkgame.c gtkgame.h gtkmet.c 
	  gtkmovefilter.c gtkprefs.c gtkrace.c gtkrolls.c gtktempmap.c 
	  gtktheory.c procunits.c procunits.h:
	  changed CreateDialog to GTKCreateDialog to avoid name clash on Windows,
	  added some #includes for Windows

Mon Jun  9 19:21:12 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c: various small fixes.
	* rollout.c: include "signal.h"

Wed Jun  4 20:18:36 2003  Joern Thyssen  <jth@gnubg.org>

	* configure.in, Makefile.am: autoconf magic for gthread.

Sat May 31 19:54:53 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): get number of processors
	for windows systems.

Sat May 31 19:48:18 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (GetProcessorCount): experimental code for 
	determining the number of processors on *nix boxes.

Sat May 31 13:51:57 2003  Joern Thyssen  <jth@gnubg.org>

	more autoconf magic.

	* Makefile.am: conditional for procunits.
	* threadglobals.c: new file.
	* procunits.[ch]: move threadglobal stuff into threadglobals.[ch]

Sat May 31 13:30:36 2003  Joern Thyssen  <jth@gnubg.org>

	Add autoconf magic for multi-processor code.

	* configure.in: look for pthread.
	* gnubg.c, eval.c, procunits.c, rollout.c: PROCESSOR_UNITS now
	defined in config.h

Sat May 31 12:55:28 2003  Joern Thyssen  <jth@gnubg.org>

	* procunits.c (Thrad_RemoteProcessingUnit): remove call to htons, since
	inAddress is already in network byte order.
	* procunits.c (RPU_SetSocketOptions): no SO_RCVTIME0 and SO_SNDTIME0
	on linux.

Sat May 31 12:24:49 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c: pacify fussy compilers.
	* procunits.[ch]: pacify fussy compilers.

Thu May 29 21:10:47 2003  Joern Thyssen  <jth@gnubg.org>
